Table: fix sort icons z-index

--- a/coral-component-table/src/styles/index.styl
+++ b/coral-component-table/src/styles/index.styl
@@ -363,7 +363,6 @@ table[is="coral-table"] {
       padding-left: 8px;
       margin-left: 8px;
       margin-top: 1px;
-      z-index: -1;
       transition: transform 125ms ease-in-out;
     }
   }
